--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -7,8 +7,16 @@
 
 {{#if User.IsActive}}
   <!-- nav bar for current user -->
+  <nav>
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/login">Login</a></li>
+      <li><a href="/signup">Signup</a></li>
 {{else}}
   <!-- nav bar for not logged in -->
 {{/if}}
 
 {{{body}}}
+
+</body>
+</html>
