--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,15 +5,23 @@
 
 <body>
 
-{{#if User.IsActive}}
+{{#if activeUser}}
   <!-- nav bar for current user -->
-  <nav>
+    <nav>
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/logout">Logout</a></li>
+      </ul>
+    </nav>
+{{else}}
+  <!-- nav bar for not logged in -->
+    <nav>
     <ul>
       <li><a href="/">Home</a></li>
       <li><a href="/login">Login</a></li>
       <li><a href="/signup">Signup</a></li>
-{{else}}
-  <!-- nav bar for not logged in -->
+    </ul>
+  </nav>
 {{/if}}
 
 {{{body}}}
